adding some slight styling.

--- a/knowdaledge/static/partials/post_detail.html
+++ b/knowdaledge/static/partials/post_detail.html
@@ -1,1 +1,5 @@
-TBD: detail view for <span>{{postId}}</span>
+<div class="col-md-12">
+    <h2>{{ post.title }}</h2>
+    <i>by {{ post.author.full_name }}</i><br />
+    <p>{{ post.message }}</p>
+</div>
