--- a/knowdaledge/kdl_site/templates/index.html
+++ b/knowdaledge/kdl_site/templates/index.html
@@ -3,13 +3,18 @@
     <head>
         <meta charset='UTF-8' />
         <title>The Knowledgium</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     </head>
     <body>
-        <h1>Welcome to the Knowledgium</h1>
-        <hr>
-        <div ng-view></div>
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.4/angular.min.js"></script>
-        <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0-beta.13/angular-route.min.js"></script>
+        <div class="container-fluid">
+            <h1><a href="/">Welcome to the Knowledgium</a> <small>Can you dig it?</small></h1>
+            <hr>
+            <div ng-view></div>
+        </div>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.4/angular.min.js"></script>
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0-beta.13/angular-route.min.js"></script>
         <script type="text/javascript" src="/static/js/app.js"></script>
         <script type="text/javascript" src="/static/js/controller.js"></script>
     </body>
