--- a/knowdaledge/static/partials/post_list.html
+++ b/knowdaledge/static/partials/post_list.html
@@ -1,7 +1,7 @@
-<div>
-    Search: <input type='text' ng-model="query">
-</div>
-<div>
+<div class="col-md-3">
+    <input type='text' ng-model="query" class="form-control" placeholder="Search...">
+</div><div class="col-md-9"></div>
+<div class="col-md-12">
     <ul>
         <li ng-repeat="post in posts | filter:query">
             <a href="#/posts/{{ post.id }}">{{ post.title }}</a> - {{ post.author.full_name}}
